# notes-api

./: Dockerfile  pyproject.toml
notes_api/: server.py
notes_api/database/mongo/: db.py
notes_api/helpers/: rest_helpers.py
notes_api/routes/: notes_router.py
notes_api/services/: user_service.py
notes_api/views/: __init__.py  note.py
