[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = ""
authors = ["ChizarR <chizarr27@gmail.com>"]
readme = "README.md"
packages = [{include = "notes_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
